--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -362,15 +362,16 @@ layout_mat
 layout(layout_mat, respect=TRUE)
 
 par(mar=c(5.1, 4.1, 4.1, 2.1))
-plot(density(nb_cpg_tss),ylim=c(0,100), main="CpG density distribution", xlab="CpG density", ylab="", yaxt="n")
+plot(density(nb_cpg_tss),ylim=c(0,100), main="DNA sequence average CpG density distribution", xlab="CpG density", ylab="", yaxt="n", xlim=c(0, .08))
 lines(density(nb_cpg_rnd, na.rm=TRUE), col=4)
-legend("topright", c(paste0("tss +/-", ud_str/1000, "kb"), paste0(2*ud_str/1000, "kb random positions")), col=c(1,4), lty=1)
+legend("topright", c(paste0("tss +/-", ud_str/1000, "kb sequences"), paste0(2*ud_str/1000, "kb hg38 random sequences")), col=c(1,4), lty=1)
 fig_label("A", cex=3)
 
 
 par(mar=c(2.5, 2.5, 4.1, 2.1))
-foo = barplot(p)
+foo = barplot(p[1:10], yaxt="n")
 axis(1, at=nrow(foo)/2, "% explained var. by PC", tick=FALSE)
+axis(2, at=c(0, 10, 20, 30, 40), c(0, 10, 20, 30, 40), las=2)
 par(mar=c(0, 4.1, 4.1, 0))
 i = 1
 plot(density(pca$x[,i]), main="EM clustering", xlab="", ylab="", xaxt="n", yaxt="n")
@@ -385,29 +386,36 @@ par(mar=c(5.1, 4.1, 0, 0))
 plot(pca$x[,1], pca$x[,2], col=adjustcolor(feats[rownames(pca$x),]$cpg_status%in%"rich"+1, alpha.f=.5), xlab=paste0("PC", 1, "(", signif(p[1], 3), "%)"), ylab=paste0("PC",2, "(", signif(p[2], 3), "%)"))
 
 par(mar=c(5.1, 4.1, 4.1, 2.1))
-plot(apply(mat[idx_poor,], 2, mean), type="l", ylim=c(0, .13), col=1, main="Average CpG density profiles", xaxt="n", ylab="CpG density", xlab="")
+plot(apply(mat[idx_poor,], 2, mean), type="l", ylim=c(0, .13), col=1, main="Cluster average CpG density profiles", xaxt="n", ylab="CpG density", xlab="")
 lines(apply(mat[idx_rich,], 2, mean), col=2)
 axis(1, at=c(0, ncol(mat)/2, ncol(mat)), label=c(paste0("TSS -", ud_str/1000, "kb"), "TSS", paste0("TSS +", ud_str/1000, "kb")))
 legend("topright", legend=c(paste0("rich (", length(idx_rich), ")"), paste0("poor (", length(idx_poor), ")")), col=2:1, lty=1)
 fig_label("C", cex=3)
 
 par(mar=c(5.1, 4.1, 4.1, 2.1))
-plot(0, main="heatmap")
-fig_label("D", cex=3)
+# plot(0, main="heatmap")
 
 
 
 
 
-
-set.seed(1)
 data = mat[order(feats[rownames(mat),]$cpg_status) , ]
+set.seed(1)
 data = data[sort(sample(1:nrow(data), min(nrow(data), 500))), ]
 rownames(data) = feats[rownames(data),]$cpg_status
 colors=c("black",  "red")
 cols = colorRampPalette(colors)(20)
-# rownames(data) = NULL
-gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, ", nrow(data), " rnd feats)"), xaxt="n", mar=c(8,5))
+foo = image(t(data), col=cols, xaxt="n", yaxt="n", main="CpG density profiles of 500 random features")
+axis(1, c(0,.5, 1), c(paste0("TSS -", ud_str/1000, "kb"), "TSS", paste0("TSS +", ud_str/1000, "kb")))
+axis(2, c(
+  0,
+  sum(rownames(data)=="poor")/nrow(data)/2, 
+  sum(rownames(data)=="poor")/nrow(data), 
+  sum(rownames(data)=="poor")/nrow(data) + sum(rownames(data)=="rich")/nrow(data)/2,  
+  1), c("", paste0("CpG poor ()", sum(rownames(data)=="poor"), ")"), "", paste0("CpG rich (", sum(rownames(data)=="rich"), ")"), ""), tick=FALSE)
+fig_label("D", cex=3)
+abline(h=sum(rownames(data)=="poor")/nrow(data), col="white")
+# gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, ", nrow(data), " rnd feats)"), xaxt="n", mar=c(8,5))
 ```
 
 
