--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -368,19 +368,31 @@ legend("topright", c(paste0("tss +/-", ud_str/1000, "kb sequences"), paste0(2*ud
 fig_label("A", cex=3)
 
 
+
 par(mar=c(2.5, 2.5, 4.1, 2.1))
 foo = barplot(p[1:10], yaxt="n")
 axis(1, at=nrow(foo)/2, "% explained var. by PC", tick=FALSE)
 axis(2, at=c(0, 10, 20, 30, 40), c(0, 10, 20, 30, 40), las=2)
 par(mar=c(0, 4.1, 4.1, 0))
 i = 1
-plot(density(pca$x[,i]), main="EM clustering", xlab="", ylab="", xaxt="n", yaxt="n")
+den=density(pca$x[,i])
+  plot(den, main="EM clustering", xlab="", ylab="", xaxt="n", yaxt="n", col="grey")
+abline (v=max(pca$x[idx_rich,i]))
+den_rich = density(pca$x[idx_rich,i], na.rm=TRUE, bw=den$bw)  
+den_poor = density(pca$x[idx_poor,i], na.rm=TRUE, bw=den$bw)
+lines(den_rich$x, den_rich$y * (den_rich$n/nrow(pca$x)), col=2, lwd=2)
+lines(den_poor$x, den_poor$y * (den_poor$n/nrow(pca$x)), col=1, lwd=2)
 fig_label("B", cex=3)
 
 par(mar=c(5.1, 0, 0, 2.1))
 i = 2
 den = density(pca$x[,i])
-plot(den$y, den$x, type="l", xlab="", ylab="", xaxt="n", yaxt="n")
+den_rich = density(pca$x[idx_rich,i], na.rm=TRUE, bw=den$bw)
+den_poor = density(pca$x[idx_poor,i], na.rm=TRUE, bw=den$bw)
+plot(den$y, den$x, type="l", xlab="", ylab="", xaxt="n", yaxt="n", col="grey")
+lines(den_rich$y * (den_rich$n/nrow(pca$x)), den_rich$x, col=2, lwd=2)
+lines(den_poor$y* (den_poor$n/nrow(pca$x)), den_poor$x , col=1, lwd=2)
+
 
 par(mar=c(5.1, 4.1, 0, 0))
 plot(pca$x[,1], pca$x[,2], col=adjustcolor(feats[rownames(pca$x),]$cpg_status%in%"rich"+1, alpha.f=.5), xlab=paste0("PC", 1, "(", signif(p[1], 3), "%)"), ylab=paste0("PC",2, "(", signif(p[2], 3), "%)"))
