--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -20,14 +20,14 @@ knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, 
 ## Figure
 
 ```{r}
-if (! exists("momik_pvals")) {
+if (! exists("momik_pvalbetas")) {
   genes_singleton = mget_genes(tcga_project)
   genes = genes_singleton$genes
 
   s_meth = mreadRDS("~/projects/all_human_tissues/results/meth/study_meth_all_human_tissues_grch38.rds")
   feat_indexed_probes = mget_feat_indexed_probes(feats_bed6=genes, s_meth$platform[,c("Chromosome", "Start")], up_str=ud_str, dwn_str=2500)
   tmp_gs = intersect(names(feat_indexed_probes), rownames(genes))
-  momik_pvals = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
+  momik_pvalbetas = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
     #print(gene_symbol)
     feat = genes[gene_symbol,]
     tss = ifelse(feat[[6]]=="+", feat[[2]], feat[[3]])
@@ -41,11 +41,13 @@ if (! exists("momik_pvals")) {
         head(mdata$d)
         Y=mdata$d[,gene_symbol]
         X=apply(mdata$d[,mdata$probes],1,mean, na.rm=TRUE)
-        m= lm(X~Y)
-        sm=summary(m)
+        m = lm(X~Y)
+        
+        sm =summary(m)
         fstat=sm$fstatistic
         pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
-        return(pval)
+        beta = m$coefficient[[2]]
+        return(c(beta=beta, pval=pval))
       } else {
         warning(paste0("probleme with ", gene_symbol))
         return(NULL)
@@ -55,11 +57,19 @@ if (! exists("momik_pvals")) {
       return(NULL)
     }
   })  
-  names(momik_pvals) = tmp_gs  
-  momik_pvals = unlist(momik_pvals)
+  names(momik_pvalbetas) = tmp_gs  
+  momik_pvalbetas = unlist(momik_pvalbetas)
+
+  momik_pvalbetas = t(momik_pvalbetas)
+  rownames(momik_pvalbetas) = tmp_gs
+  momik_pvalbetas[is.na(momik_pvalbetas[,2]),2] = 1
 }
 feats$momik_pvals = NA
-feats[names(momik_pvals),]$momik_pvals = momik_pvals
+feats[names(momik_pvalbetas),]$momik_pvals = momik_pvalbetas[,2]
+feats$momik_betas = NA
+feats[names(momik_pvalbetas),]$momik_betas = momik_pvalbetas[,1]
+
+
 
 
 if (! exists("survival_pvalhrs")) {
@@ -108,14 +118,23 @@ gene_symbols = gene_symbols[order(feats[gene_symbols,]$momik_pvals)][1:min(20, l
 
 
 layout(1, respect=TRUE)
-plot(-log10(feats$momik_pvals), -log10(feats$survival_pvals), col=adjustcolor(1, alpha.f=.3), xlab="multi-omic score", ylab="-log10(pval_logrank)", xlim=c(0,1.5*max(-log10(feats[gene_symbols,]$momik_pvals))), ylim=c(0,1.5*max(-log10(feats[gene_symbols,]$survival_pvals))))
+plot(-log10(feats$momik_pvals), -log10(feats$survival_pvals), col=adjustcolor(1, alpha.f=.3), 
+  xlab="multiomic score", 
+  ylab="-log10(survival logrank p-value)", xlim=c(0,2*max(-log10(feats[gene_symbols,]$momik_pvals))), ylim=c(0,2*max(-log10(feats[gene_symbols,]$survival_pvals))))
 abline(h=-log10(0.05), lty=2)
 points(-log10(feats[idx,]$momik_pvals), -log10(feats[idx,]$survival_pvals), col="red")
 points(-log10(feats[idx2,]$momik_pvals), -log10(feats[idx2,]$survival_pvals), col=adjustcolor("blue", alpha.f=.8), pch=16)
-points(-log10(feats[idx3,]$momik_pvals), -log10(feats[idx3,]$survival_pvals), col=adjustcolor("green", alpha.f=.8), pch=16)
+points(-log10(feats[idx3,]$momik_pvals), -log10(feats[idx3,]$survival_pvals), col=adjustcolor("purple", alpha.f=.8), pch=16)
 
-text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, pos=3, col="white")
-text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, pos=3, col=adjustcolor(1, alpha.f=0.8))
+# text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, pos=3, col="white")
+text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survival_pvals), gene_symbols, col=adjustcolor(1, alpha.f=1), pos=c(1,3))
+legend("topright", 
+  c("genes", paste0(gs_name, " genes"), paste0(gs_name, " genes upregulated GSE45332 DA"), paste0(gs_name, " genes upregulated GSE5816 DA"), "5% survival logrank p-value threshold "), 
+  pch=c(1, 1, 16, 16, NA), 
+  col=c("grey", "red", "blue", "purple", "black"),
+  lty=c(0,0,0,0,2)
+)
+# stop("EFN")
 ```
 
 
@@ -126,16 +145,45 @@ text(-log10(feats[gene_symbols,]$momik_pvals), -log10(feats[gene_symbols,]$survi
 tcga_project = "TCGA-LUSC"
 s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
 s = truncate_survival(s, 60)
+idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
 
 
-for (gene_symbol in gene_symbols) {
-  idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
+foo = sapply(gene_symbols, function(gene_symbol) {
   ss = s$exp_grp[idx_sample,]$os
   v = s$data[gene_symbol, idx_sample]
-  try(epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol))
+  par(mar=c(2.5, 2.5, 4.1, 2.1))
+  ret = try(epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol))
   try(momic_pattern(gene_symbol, tcga_project))
-}
+  ret
+})
+
+# thresh = do.call(rbind,foo[1,])[,2]
+#
+# idx_genes = gene_symbols[1:4]
+# v = apply(s$data[idx_genes,idx_sample] > thresh[idx_genes], 2, sum)
+# table(v)
+# ss = s$exp_grp[idx_sample,]$os
+# par(mar=c(2.5, 2.5, 4.1, 2.1))
+# ret = try(epimedtools::plot_survival_panel_simple2(ss=ss, v=v, main=gene_symbol))
+
 ```
+
+## Discussion
+
+Nicotine promotes the development of non-small cell lung cancer through activating LINC00460 and PI3K/Akt signaling.
+Zhao H, Wang Y, Ren X.
+Biosci Rep. 2019 Jun 7;39(6):BSR20182443. doi: 10.1042/BSR20182443. Print 2019 Jun 28.
+PMID: 31123168 Free PMC article.
+
+LINC00460 promotes proliferation and inhibits apoptosis of non-small cell lung cancer cells through targeted regulation of miR-539.
+Wang HX, Kang LJ, Qin X, Xu J, Fei JW.
+Eur Rev Med Pharmacol Sci. 2020 Jun;24(12):6752-6758. doi: 10.26355/eurrev_202006_21663.
+PMID: 32633366 Free article.
+
+Long non-coding RNA linc00460 promotes epithelial-mesenchymal transition and cell migration in lung cancer cells.
+Li K, Sun D, Gou Q, Ke X, Gong Y, Zuo Y, Zhou JK, Guo C, Xia Z, Liu L, Li Q, Dai L, Peng Y.
+Cancer Lett. 2018 Apr 28;420:80-90. doi: 10.1016/j.canlet.2018.01.060. Epub 2018 Jan 31.
+PMID: 29409808
 
 
 
