--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -3,6 +3,11 @@ title: "Step 1: CpG status of region surrounding TSS"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output:
+  rmarkdown::html_document:
+    toc: true
+    toc_float: true
+    toc_depth: 3
+    number_sections: true
   pdf_document:
     keep_tex: true
 ---
