--- a/results/00_dmethr_pipeline.Rmd
+++ b/results/00_dmethr_pipeline.Rmd
@@ -42,6 +42,9 @@ prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reduc
 ```{r child="03_da_GSE5816.Rmd"}
 ```
 
+```{r child="03_da_summary.Rmd"}
+```
+
 ```{r child="04_results.Rmd"}
 ```
 
