--- a/results/02_mapreduce_mean.Rmd
+++ b/results/02_mapreduce_mean.Rmd
@@ -184,29 +184,6 @@ colors=c("cyan", "black", "red")
 cols = colorRampPalette(colors)(20)
 
 hm = gplots::heatmap.2(data, Rowv=Rowv, Colv=Colv, dendrogram=dendrogram, trace="none", col=cols, main=paste0(reducer_func2_name, " of mean (", nrow(data), " genes x ", ncol(data), " tissues)"), mar=c(10,5), useRaster=TRUE)
-
-```
-
-
-**CpG-rich genes methylation status in healthy tissues.**
-CpG-rich associated genes are clustered according to their methylation status in a publicly  available  dataset  of  normal  tissues  (GSE56515,  GSE48472,  GSE64096,  GSE50192,  GSE31848,GSE73375). From Illumina 450k studies, we obtain a methylation matrix of `r ncol(s_meth$data)` samples, 
-dispatched into `r length(unique(s_meth$exp_grp$tissue_group_level1))` tissues.This matrix is successively reduced, first by tissues, then by genes with CpG rich promoter. The function used to reduce the data is the `mean`. A matrix of average methylation values is obtained for `r nrow(data)` genes and `r ncol(meth_by_tissues_by_gene)` tissues. Hierarchical clustering on this matrix is proceeding, the heatmap on figure ? show the results. The hypermethylated genes are in red and less methylated in blue, tissues are presented on the x axis with clustering hierarchique dendrogramm on tissues on top and the genes are presented on the y axis with the hierarchical dendrogramm on the genes at the opposite side. The fisrt branch of this last dendrogramm selected a subset of `r length(gs_methplusplus)` CpG-rich genes widely methylated in healthy tissues.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-```{r selecting_genes, echo=TRUE, results="verbatim", eval=TRUE}
-
 idx1 = rownames(data)[unlist(hm$rowDendrogram[[1]])]
 idx2 = rownames(data)[unlist(hm$rowDendrogram[[2]])]
 
@@ -219,15 +196,33 @@ if (mean(data[idx1,]) < mean(data[idx2,])) {
   # gs_methminusminus = rownames(data)[unlist(hm$rowDendrogram[[2]])]
 }
 length(gs_methplusplus)
-
-
 gs_name = "methplusplus"
 
 feats[[gs_name]] = rownames(feats) %in% gs_methplusplus
-table(feats$cpg_status, feats[[gs_name]], useNA="ifany")
-
-# expression_in_gtex(rownames(feats)[feats[[gs_name]]])
-
 
 ```
+
+
+
+**CpG-rich genes methylation status in healthy tissues.**
+CpG-rich associated genes are clustered according to their methylation status in a publicly  available  dataset  of  normal  tissues  (GSE56515,  GSE48472,  GSE64096,  GSE50192,  GSE31848,GSE73375). From Illumina 450k studies, we obtain a methylation matrix of `r ncol(s_meth$data)` samples, 
+dispatched into `r length(unique(s_meth$exp_grp$tissue_group_level1))` tissues.This matrix is successively reduced, first by tissues, then by genes with CpG rich promoter. The function used to reduce the data is the `mean`. A matrix of average methylation values is obtained for `r nrow(data)` genes and `r ncol(meth_by_tissues_by_gene)` tissues. Hierarchical clustering on this matrix is proceeding, the heatmap on figure ? show the results. The hypermethylated genes are in red and less methylated in blue, tissues are presented on the x axis with clustering hierarchique dendrogramm on tissues on top and the genes are presented on the y axis with the hierarchical dendrogramm on the genes at the opposite side. The fisrt branch of this last dendrogramm selected a subset of `r sum(feats[[gs_name]])` CpG-rich genes widely methylated in healthy tissues.
+
+
+
+```{r selecting_genes, echo=TRUE, results="verbatim", eval=TRUE}
+table(feats$cpg_status, feats[[gs_name]], useNA="ifany")
+# expression_in_gtex(rownames(feats)[feats[[gs_name]]])
+```
+
+
+
+
+
+
+
+
+
+
+
 
