--- a/results/00_dmethr_poster.Rmd
+++ b/results/00_dmethr_poster.Rmd
@@ -302,8 +302,74 @@ layout_mat2 = cbind(
     matrix(4, nrow=2, ncol=2)
   )
 )
+
+
+layout_mat2 =
+  cbind(
+    rbind (
+      cbind(
+        matrix(2, nrow=3, ncol=1),
+        matrix(1, nrow=3, ncol=4)
+      ),
+      matrix(4, nrow=5, ncol=5)
+    ),
+    rbind (
+      matrix(3, nrow=2, ncol=2),
+      matrix(5, nrow=2, ncol=2),
+      matrix(6, nrow=2, ncol=2),
+      matrix(7, nrow=2, ncol=2)
+    )
+  )
+
+
+
+layout_mat2 =
+  rbind (
+    cbind(
+      matrix(2, nrow=3, ncol=1),
+      matrix(1, nrow=3, ncol=4),
+      matrix(3, nrow=3, ncol=3)
+    ),
+    cbind (
+      matrix(4, nrow=6, ncol=6),
+      rbind (
+        matrix(5, nrow=2, ncol=2),
+        matrix(6, nrow=2, ncol=2),
+        matrix(7, nrow=2, ncol=2)
+      )
+    )
+  )
+
+
 layout_mat2 
+
+
+
+ntop=100
+idx = rownames(feats)[feats[["methplusplus"]]]
+idx2 = idx[order(feats[idx,]$l2fc_GSE45332, decreasing=TRUE)][1:ntop]
+idx3 = idx[order(feats[idx,]$l2fc_GSE5816, decreasing=TRUE)][1:ntop]
+gene_symbols = gene_symbols[order(feats[gene_symbols,]$momik_pvals)][1:min(6, length(gene_symbols))]
+
+
 layout(layout_mat2, respect=TRUE)
+
+foo = momic_pattern("TSPYL5", tcga_project, LAYOUT=FALSE)
+fig_label("A", cex=3)
+
+meth = apply(foo$d[,foo$probes], 1, mean)
+expr = foo$d[,foo$gene_symbols]
+plot(meth, expr, main=paste0("TSPYL5 expr. ~ av. meth."), xlab="average methylation", ylab= "expression")
+m = lm(expr~meth)
+abline(m, col=2)
+fig_label("B", cex=3)
+
+legend("bottomleft", c(paste0("Fisher pval=", signif(anova(m)[1,5],3)), paste0("beta=", signif(m$coef[[2]],3))), border=0)
+
+
+
+
+
 plot(feats$momik_betas, feats$momik_lpvals, col="grey", xlim=c(-0.2,0.2), main="gene expression ~ TSS+/-2.5kb methylation", xlab="linear regression coefficient", ylab="-log10(Fisher p-value)")
 points(feats[idx,]$momik_betas, feats[idx,]$momik_lpvals  , col="red")
 points(feats[idx2,]$momik_betas, feats[idx2,]$momik_lpvals, col="blue", pch=16)
@@ -315,7 +381,7 @@ legend("topright",
   col=c("grey", "red", "blue", "purple"),
   lty=c(0,0,0,0)
 )
-fig_label("A", cex=3)
+fig_label("C", cex=3)
 
 gene_set = idx
 gs_name = "momik_betas"
@@ -323,7 +389,7 @@ expression_vector = feats[,gs_name]
 names(expression_vector) = rownames(feats)
 expression_vector = expression_vector[!is.na(expression_vector)]
 et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3)
-fig_label("C", cex=3)
+fig_label("D", cex=3)
 
 # gs_name = "momik_lpvals"
 # expression_vector = feats[,gs_name]
@@ -338,7 +404,7 @@ expression_vector = feats[idx,gs_name]
 names(expression_vector) = idx
 expression_vector = expression_vector[!is.na(expression_vector)]
 et_gsea_plot(expression_vector, gene_set, prefix=paste0("top", ntop, "_l2fc_GSE45332"), nperm=3)
-fig_label("D", cex=3)
+fig_label("E", cex=3)
 
 # gs_name = "momik_lpvals"
 # expression_vector = feats[idx,gs_name]
@@ -353,7 +419,7 @@ expression_vector = feats[idx,gs_name]
 names(expression_vector) = idx
 expression_vector = expression_vector[!is.na(expression_vector)]
 et_gsea_plot(expression_vector, gene_set, prefix=paste0("top", ntop, "_l2fc_GSE5816"), nperm=3)
-fig_label("E", cex=3)
+fig_label("F", cex=3)
 
 # gs_name = "momik_lpvals"
 # expression_vector = feats[idx,gs_name]
@@ -363,8 +429,6 @@ fig_label("E", cex=3)
 # fig_label("G", cex=3)
 
 
-momic_pattern("TSPYL5", tcga_project, LAYOUT=FALSE)
-fig_label("B", cex=3)
 
 # stop("EFN")
 ```
